// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLoader adds custom className en size to Loader 1`] = `
<React.Fragment>
  <BaseComponent
    count={0}
    items={Array []}
    status="success"
  />
  <Loader
    className="foo"
    size="bar"
  />
</React.Fragment>
`;

exports[`withLoader adds custom className en size to Loader 2`] = `
<React.Fragment>
  <BaseComponent
    count={0}
    foo={false}
    items={Array []}
    status="success"
  />
  <Loader
    className="foo"
    size="bar"
  />
</React.Fragment>
`;

exports[`withLoader renders default 1`] = `
<React.Fragment>
  <BaseComponent
    count={0}
    items={Array []}
    status="success"
  />
</React.Fragment>
`;

exports[`withLoader renders loader given getShowLoader 1`] = `
<React.Fragment>
  <BaseComponent
    count={0}
    foo={true}
    items={Array []}
    status="success"
  />
  <Loader />
</React.Fragment>
`;

exports[`withLoader renders loader given getShowLoader 2`] = `
<React.Fragment>
  <BaseComponent
    count={0}
    foo={false}
    items={Array []}
    status="success"
  />
</React.Fragment>
`;
